# WineTypePrediction

./: README.md  pyproject.toml  winePredictionType.ipynb
