[project]
name = "winetypeprediction"
version = "0.1.0"
description = "Modéle qui prédit si un vin est rouge ou blanc en fonction de descripteur physico-chimique"
authors = [
    {name = "fmazur57u",email = "florianmazur2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub (>=0.3.13,<0.4.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
